src/test/ui/issues/issue-43105.stderr
error[E0015]: calls in constants are limited to constant functions, tuple structs and tuple variants
  --> $DIR/issue-43105.rs:13:17
   |
LL | const NUM: u8 = xyz();
   |                 ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
